# Raycaster

./: .gitignore  CMakeLists.txt
src/: GLManager.cpp  GLManager.hpp  SDLManager.cpp  SDLManager.hpp  initSDL.cpp  initSDL.hpp  main.cpp  window.cpp  window.hpp
